--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <style>
             #testimonials
             {
-                height: 30vh;
+                height: 45vh;
                 background-color: #527cb8;
                 color: white;
                 display: flex;
@@ -16,39 +16,10 @@
     </head>
 
     <body>
-
         <div id="testimonials" class="carousel slide" data-bs-ride="carousel">
             <div class="carousel-inner w-75">
                 <h1 class="text-center">What our customers say about us</h1>
                 <br />
-                <div class="carousel-item active">
-                    <div style="display: flex; justify-content: center;">
-                        <blockquote style="width: 50%;">
-                            <p>
-                                <q>Two jobs that were far too hard for me appear to
-                                have been easy for Ben! Ben understood the problems immediately, knew how to fix
-                                them, and made useful suggestions about what he could do to get the best long
-                                term result. Very happy.</q>
-                                <p>
-                                    <span class="fa fa-star"></span>
-                                    <span class="fa fa-star"></span>
-                                    <span class="fa fa-star"></span>
-                                    <span class="fa fa-star"></span>
-                                    <span class="fa fa-star"></span>
-                                </p>
-                                <p>Simon</p>
-                                <p><i>May, 2019</i></p>
-                            </p>
-                        </blockquote>
-                    </div>
-                </div>
-                <div class="carousel-item">
-                    <p>slice 21</p>
-
-                </div>
-                <div class="carousel-item">
-                    <p>slice 3</p>
-                </div>
             </div>
             <button class="carousel-control-prev" type="button" data-bs-target="#testimonials" data-bs-slide="prev">
                 <span class="carousel-control-prev-icon" aria-hidden="true"></span>
@@ -59,159 +30,6 @@
                 <span class="visually-hidden">Next</span>
             </button>
         </div>
-
-
-        <!--
-
-        <div id="testimonials" data-column-margin="default" data-midnight="light" data-bg-mobile-hidden=""
-            class="wpb_row vc_row-fluid vc_row full-width-section standard_section"
-            style="padding-top: 0px; padding-bottom: 0px; ">
-            <div class="row-bg-wrap" data-bg-animation="none" data-bg-overlay="false">
-                <div class="inner-wrap">
-                    <div class="row-bg using-bg-color" style="background-color: #527cb8; "></div>
-                </div>
-                <div class="row-bg-overlay"></div>
-            </div>
-            <div class="col span_12 light center">
-                <div style=" color: #ffffff;"
-                    class="vc_col-sm-12 wpb_column column_container vc_column_container col centered-text no-extra-padding instance-6"
-                    data-t-w-inherits="default" data-border-radius="none" data-shadow="none" data-border-animation=""
-                    data-border-animation-delay="" data-border-width="none" data-border-style="solid" data-border-color=""
-                    data-bg-cover="" data-padding-pos="all" data-has-bg-color="false" data-bg-color="" data-bg-opacity="1"
-                    data-hover-bg="" data-hover-bg-opacity="1" data-animation="" data-delay="0">
-                    <div class="vc_column-inner">
-                        <div class="column-bg-overlay-wrap" data-bg-animation="none">
-                            <div class="column-bg-overlay"></div>
-                        </div>
-                        <div class="wpb_wrapper">
-                            <div class="divider-wrap" data-alignment="default">
-                                <div style="height: 80px;" class="divider"></div>
-                            </div>
-                            <h3 style="font-size: 30px;color: #ffffff;text-align: center" class="vc_custom_heading">What our
-                                customers say about us</h3>
-                            <div class="divider-wrap" data-alignment="default">
-                                <div style="height: 20px;" class="divider"></div>
-                            </div>
-                            <div class="col span_12 testimonial_slider " data-color="" data-rating-color="extra-color-2"
-                                data-add-border="" data-autorotate="7000" data-style="minimal" style="opacity: 1;">
-                                <div class="slides" style="height: 309px;">
-                                    <blockquote class="active" style="opacity: 1; transform: translateX(0px); z-index: 20;">
-                                        <p><span class="open-quote">“</span>Two jobs that were far too hard for me appear to
-                                            have been easy for Ben! Ben understood the problems immediately, knew how to fix
-                                            them, and made useful suggestions about what he could do to get the best long
-                                            term result. Very happy.<span class="close-quote">”</span><span
-                                                class="star-rating-wrap"> <span class="star-rating"><span
-                                                        style="width: 100%;" class="filled"></span></span></span> <span
-                                                class="bottom-arrow"></span></p> <span
-                                            class="testimonial-name">Simon</span><span class="title">May, 2019</span>
-                                    </blockquote>
-                                    <blockquote class="no-trans"
-                                        style="opacity: 0; transform: translateX(-25px); z-index: 1;">
-                                        <p><span class="open-quote">“</span>We got one side of our house fully recladded,
-                                            framing repaired, insulated, two windows replaced and everything painted. Ben
-                                            did a great job, worked very efficiently and finished ahead of schedule. At each
-                                            step of the way Ben was very clear about what our options were and what they
-                                            would cost. Very happy with the finished job. Will definitely be using Ben for
-                                            future jobs.<span class="close-quote">”</span><span class="star-rating-wrap">
-                                                <span class="star-rating"><span style="width: 100%;"
-                                                        class="filled"></span></span></span> <span
-                                                class="bottom-arrow"></span></p> <span
-                                            class="testimonial-name">Chris</span><span class="title">April, 2019</span>
-                                    </blockquote>
-                                    <blockquote class="no-trans"
-                                        style="opacity: 0; transform: translateX(-25px); z-index: 1;">
-                                        <p><span class="open-quote">“</span>Ben and team did a great job replacing rotten
-                                            weatherboards and painting the new ones, as well as repairing a rotten window
-                                            frame and replacing flashings. Very fast and professional service.<span
-                                                class="close-quote">”</span><span class="star-rating-wrap"> <span
-                                                    class="star-rating"><span style="width: 100%;"
-                                                        class="filled"></span></span></span> <span
-                                                class="bottom-arrow"></span></p> <span
-                                            class="testimonial-name">Emma</span><span class="title">May, 2019</span>
-                                    </blockquote>
-                                    <blockquote class="no-trans"
-                                        style="opacity: 0; transform: translateX(-25px); z-index: 1;">
-                                        <p><span class="open-quote">“</span>Ben has worked for us a number of times and we
-                                            have always found his work to be of a very high standard. He has always been
-                                            able to offer alternative options and to very carefully explain their
-                                            differences and related costs, something that others do not always do. He has
-                                            been punctual and has completed the work on time and has tidied up after the job
-                                            without being asked to. We have no hesitation in recommending him to other
-                                            people.<span class="close-quote">”</span><span class="star-rating-wrap"> <span
-                                                    class="star-rating"><span style="width: 100%;"
-                                                        class="filled"></span></span></span> <span
-                                                class="bottom-arrow"></span></p> <span
-                                            class="testimonial-name">Mike</span><span class="title">June, 2019</span>
-                                    </blockquote>
-                                    <blockquote class="no-trans"
-                                        style="opacity: 0; transform: translateX(-25px); z-index: 1;">
-                                        <p><span class="open-quote">“</span>Ben was a pleasure to deal with. Good
-                                            communication and turns up when he says he will. Straight up and down about what
-                                            need to be done and why and prices jobs well. Very happy with the work he
-                                            did.<span class="close-quote">”</span><span class="star-rating-wrap"> <span
-                                                    class="star-rating"><span style="width: 100%;"
-                                                        class="filled"></span></span></span> <span
-                                                class="bottom-arrow"></span></p> <span
-                                            class="testimonial-name">John</span><span class="title">August, 2019</span>
-                                    </blockquote>
-                                    <blockquote class="no-trans"
-                                        style="opacity: 0; transform: translateX(-25px); z-index: 1;">
-                                        <p><span class="open-quote">“</span>Great job painting the interior of our cottage.
-                                            The work was done to a high standard in good time. Thanks.<span
-                                                class="close-quote">”</span><span class="star-rating-wrap"> <span
-                                                    class="star-rating"><span style="width: 100%;"
-                                                        class="filled"></span></span></span> <span
-                                                class="bottom-arrow"></span></p> <span
-                                            class="testimonial-name">Jacquie</span><span class="title">August, 2019</span>
-                                    </blockquote>
-                                    <blockquote class="no-trans"
-                                        style="opacity: 0; transform: translateX(-25px); z-index: 1;">
-                                        <p><span class="open-quote">“</span>Vh repaired a water damaged ceiling and
-                                            repainted it. Ben was great to deal with, there was clear communication from
-                                            start to finish and the job was completed quickly and to a very high
-                                            standard.<span class="close-quote">”</span><span class="star-rating-wrap"> <span
-                                                    class="star-rating"><span style="width: 100%;"
-                                                        class="filled"></span></span></span> <span
-                                                class="bottom-arrow"></span></p> <span
-                                            class="testimonial-name">Jacquie</span><span class="title">November, 2019</span>
-                                    </blockquote>
-                                </div>
-                                <div class="controls">
-                                    <div class="control-wrap">
-                                        <ul style="width: 141px; transform: translateX(0px);">
-                                            <li>1</li>
-                                            <li>2</li>
-                                            <li>3</li>
-                                            <li>4</li>
-                                            <li>5</li>
-                                            <li>6</li>
-                                            <li>7</li>
-                                        </ul>
-                                    </div><span class="out-of">/</span><span class="total">7</span>
-                                </div>
-                                <div class="testimonial-next-prev"><a href="#" class="prev fa fa-angle-left"></a><a href="#"
-                                        class="next fa fa-angle-right"></a></div>
-                            </div>
-                            <div class="divider-wrap" data-alignment="default">
-                                <div style="height: 40px;" class="divider"></div>
-                            </div> <a class="nectar-button large regular  regular-button"
-                                style="color: rgb(87, 129, 189); background-color: rgb(255, 255, 255); visibility: visible;"
-                                target="_blank"
-                                href="https://www.nocowboys.co.nz/businesses/vhbuilding-painting-services#ratings"
-                                data-color-override="#ffffff" data-hover-color-override="false"
-                                data-hover-text-color-override="#fff" title="painter wellington - VH Painting"><span>Read
-                                    more testimonials on our No Cowboys profile</span></a>
-                            <div class="divider-wrap" data-alignment="default">
-                                <div style="height: 60px;" class="divider"></div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-        -->
-
-
 
         <div id="fws_60877345b1bc5" data-column-margin="default" data-midnight="dark" data-bg-mobile-hidden=""
             class="wpb_row vc_row-fluid vc_row full-width-section standard_section "
@@ -439,6 +257,7 @@
 
         <footer>
             <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js" integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous"></script>
+            <script src="testimonials.js"></script>
         </footer>
     </body>
 </html>
