sort out the picture later

--- a/index.html
+++ b/index.html
@@ -31,6 +31,24 @@
             </button>
         </div>
 
+        <br />
+        <div class="w-75" id="pictures">
+            <p class="d-flex justify-content-end">
+                <button class="btn" type="button" data-bs-target="#pictures" data-bs-slide="prev">
+                    <i class="fa fa-arrow-left"></i>
+                    <!-- <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Previous</span> -->
+                </button>
+                <button class="btn" type="button" data-bs-target="#pictures" data-bs-slide="next">
+                    <i class="fa fa-arrow-right"></i>
+                    <!-- <span class="carousel-control-next-icon" aria-hidden="true"></span> -->
+                    <!-- <span class="visually-hidden">Next</span> -->
+                </button>
+            </p>
+            test
+
+        </div>
+
         <div id="fws_60877345b1bc5" data-column-margin="default" data-midnight="dark" data-bg-mobile-hidden=""
             class="wpb_row vc_row-fluid vc_row full-width-section standard_section "
             style="padding-top: 0px; padding-bottom: 0px; ">
