need to go now - later for pictures

--- a/index.html
+++ b/index.html
@@ -32,20 +32,16 @@
         </div>
 
         <br />
-        <div class="w-75" id="pictures">
+        <div id="pictures" class="w-50 carousel slide" data-bs-ride="carousel">
             <p class="d-flex justify-content-end">
                 <button class="btn" type="button" data-bs-target="#pictures" data-bs-slide="prev">
                     <i class="fa fa-arrow-left"></i>
-                    <!-- <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                    <span class="visually-hidden">Previous</span> -->
                 </button>
                 <button class="btn" type="button" data-bs-target="#pictures" data-bs-slide="next">
                     <i class="fa fa-arrow-right"></i>
-                    <!-- <span class="carousel-control-next-icon" aria-hidden="true"></span> -->
-                    <!-- <span class="visually-hidden">Next</span> -->
                 </button>
             </p>
-            test
+            <div class="carousel-inner"></div>
 
         </div>
 
