--- a/index.html
+++ b/index.html
@@ -3,6 +3,13 @@
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
         <style>
+            #navigation
+            {
+                position:fixed;
+                background-color: white;
+                width: 100%;
+                display: flex;
+            }
             #testimonials
             {
                 height: 45vh;
@@ -32,6 +39,7 @@
                 </div>
             </div>
         </div>
+        
         <br>    
         <div id="home" class="carousel slide" data-bs-ride="carousel">
             <div class="carousel-inner w-75">
