--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
                 position:fixed;
                 background-color: white;
                 width: 100%;
-                display: flex;
             }
             #testimonials
             {
@@ -26,16 +25,17 @@
 
         <div id="navigation">
             <div class="row">
-                <div class="column">Painting Services</div>
-                <div class="column">
-                    <h2>
+                <div class="col-3" style="color:blue"><h2> Tan Huong Painting Services </h2></div>
+                <div class="col-9">                    
+                    <div>
+                        <h2>
                     <a href="#home">Home</a>
                     <a href="#about">About Us</a>
                     <a href="#testimonials">Testimonials</a>
-                    <a href="#pictures">Sample Picture</a>
                     <a href="#whatwedo">What we do</a>
-                    <a href="#quote">Get a free no-obligation Quote!</a>    
+                    <a href="#quote">Get a free no-obligation Quote!</a>                    
                 </h2>
+                </div>
                 </div>
             </div>
         </div>
@@ -43,13 +43,13 @@
         <br>    
         <div id="home" class="carousel slide" data-bs-ride="carousel">
             <div class="carousel-inner w-75">
+                <br>
+                <br>
                 <h1 class="text-center">Painting Services</h1>
                 <br />
             </div>
-            <div class="row">
-                <div class="column">Providing interior & exterior painting in Wellington for over 15 years</div>
-                <div class="column">Picture</div>
-            </div>
+            <h4> Providing interior & exterior painting in Wellington for over 15 years </h4>
+
 
         </div>
 
@@ -57,14 +57,14 @@
         <div id="about" class="carousel slide" data-bs-ride="carousel">
             <div class="carousel-inner w-75">
                 <h1 class="text-center">About Us</h1>
-                <h2> About Us</h2>
-                <h2>We service most of the Wellington Region with a focus on the Eastern & Southern Suburbs, Wellington City and Johnsonville.</h2>
+                <h4> About Us</h4>
+                <h4>We service most of the Wellington Region with a focus on the Eastern & Southern Suburbs, Wellington City and Johnsonville.</h4>
                 <br>
-                <h2>We can assist with everything from initial colour consultation through to Exterior and Interior painting of your home. We complete the job to a professional and excellent standard and all work is under warranty for 3 years.</h2>
+                <h4>We can assist with everything from initial colour consultation through to Exterior and Interior painting of your home. We complete the job to a professional and excellent standard and all work is under warranty for 3 years.</h4>
                 <br>
-                <h2>We are competitive on price, and our customer service is second to none. Our aim is to exceed your expectations of a painter, becoming Wellingtons most trusted, dependable and efficient painter.</h2>
+                <h4>We are competitive on price, and our customer service is second to none. Our aim is to exceed your expectations of a painter, becoming Wellingtons most trusted, dependable and efficient painter.</h4>
                 <br>
-                <h2>Whether your home needs an extensive overhaul, or a simple touch up we are the local team you can trust.</h2>
+                <h4>Whether your home needs an extensive overhaul, or a simple touch up we are the local team you can trust.</h4>
                 <br />
             </div>
         </div>
